// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverviewPage should get employee's subordinates 1`] = `
<div>
  <div
    class="sc-AykKC jjVxQu"
  >
    <div
      class="sc-AykKD kOsfAI"
    >
      <h1
        class="sc-AykKE cuheMn"
      >
        Employee Overview
      </h1>
    </div>
    <div
      class="sc-AykKF hBaFEr"
    >
      <p>
        Subordinates of employee 
        <span
          class="sc-AykKG bYBuez"
        >
          Henry Lee
        </span>
      </p>
      <ul
        class="sc-AykKH klLnVA"
      >
        <li
          class="sc-AykKI fVbxAQ"
        >
          Subordinate 1
        </li>
        <li
          class="sc-AykKI fVbxAQ"
        >
          Subordinate 2
        </li>
        <li
          class="sc-AykKI fVbxAQ"
        >
          Subordinate 3
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`OverviewPage should show general error message if other error 1`] = `
<div>
  <div
    class="sc-AykKJ dWHlJx"
  >
    <svg
      class="sc-fzXfLO gjphZj"
    >
      alarm.svg
    </svg>
    <h1
      class="sc-AykKK cEQxlF"
    >
      Opps something goes wrong
    </h1>
  </div>
</div>
`;

exports[`OverviewPage should show loading when getting subordinates 1`] = `
<div>
  <div
    class="sc-AykKC jjVxQu"
  >
    <div
      class="sc-AykKD kOsfAI"
    >
      <h1
        class="sc-AykKE cuheMn"
      >
        Employee Overview
      </h1>
    </div>
    <div
      class="sc-AykKF hBaFEr"
    >
      <div
        class="sc-fzXfLP fOEUNm"
        data-testid="loading"
      />
    </div>
  </div>
</div>
`;
